--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display"></div>
+        <div id="display">0</div>
         <div class="numbers">
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button id="0">0</button>
+            <button class="number" type="button" value="1">1</button>
+            <button class="number" type="button" value="2">2</button>
+            <button class="number" type="button" value="3">3</button>
+            <button class="number" type="button" value="4">4</button>
+            <button class="number" type="button" value="5">5</button>
+            <button class="number" type="button" value="6">6</button>
+            <button class="number" type="button" value="7">7</button>
+            <button class="number" type="button" value="8">8</button>
+            <button class="number" type="button" value="9">9</button>
+            <button class="number" type="button" value="0">0</button>
         </div>
         <div class="operators">
-            <button id="add">+</button>
-            <button id="subtract">-</button>
-            <button id="multiply">*</button>
-            <button id="divide">/</button>
-            <button id="equals">=</button>
+            <button class="operator" type="button" value="+">+</button>
+            <button class="operator" type="button" value="-">-</button>
+            <button class="operator" type="button" value="-">*</button>
+            <button class="operator" type="button" value="/">/</button>
+            <button id="equals" type="button" value="=">=</button>
         </div>
-        <button id="clear">Clear</button>
+        <button type="button" id="clear">Clear</button>
     </div>
     <script src="main.js"></script>
 </body>
